libs/sqf/tests/snapshots/lints__simple_s46_is_equal_type.snap
---
source: libs/sqf/tests/lints.rs
expression: "lint(stringify! (s46_is_equal_type), true).0"
---
[0m[1m[38;5;11mwarning[L-S03][0m[1m: using `typeName` on a constant is slower than using the type directly[0m
   [0m[36m┌─[0m s46_is_equal_type.sqf:17:20
   [0m[36m│[0m
[0m[36m17[0m [0m[36m│[0m if (typeName _a == [0m[33mtypeName ""[0m) then { };
   [0m[36m│[0m                    [0m[33m^^^^^^^^^^^[0m [0m[33m`typeName` on a constant[0m
   [0m[36m│[0m
   [0m[36m=[0m [32mtry[0m: "STRING"


[0m[1m[38;5;14mhelp[L-S46][0m[1m: code can be replaced with `isEqualType`[0m
  [0m[36m┌─[0m s46_is_equal_type.sqf:5:5
  [0m[36m│[0m
[0m[36m5[0m [0m[36m│[0m if ([0m[36mtypeName _a == typeName _b[0m) then { };
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualType`[0m
  [0m[36m│[0m
  [0m[36m=[0m [32mtry[0m: _a isEqualType _b


[0m[1m[38;5;14mhelp[L-S46][0m[1m: code can be replaced with `isEqualType`[0m
  [0m[36m┌─[0m s46_is_equal_type.sqf:6:5
  [0m[36m│[0m
[0m[36m6[0m [0m[36m│[0m if ([0m[36mtypeName _a isEqualTo typeName _b[0m) then { };
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualType`[0m
  [0m[36m│[0m
  [0m[36m=[0m [32mtry[0m: _a isEqualType _b


[0m[1m[38;5;14mhelp[L-S46][0m[1m: code can be replaced with `isEqualType`[0m
  [0m[36m┌─[0m s46_is_equal_type.sqf:9:5
  [0m[36m│[0m
[0m[36m9[0m [0m[36m│[0m if ([0m[36mtypeName _a != typeName _b[0m) then { };
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualType`[0m
  [0m[36m│[0m
  [0m[36m=[0m [32mtry[0m: !(_a isEqualType _b)


[0m[1m[38;5;14mhelp[L-S46][0m[1m: code can be replaced with `isEqualType`[0m
   [0m[36m┌─[0m s46_is_equal_type.sqf:10:5
   [0m[36m│[0m
[0m[36m10[0m [0m[36m│[0m if ([0m[36mtypeName _a isNotEqualTo typeName _b[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualType`[0m
   [0m[36m│[0m
   [0m[36m=[0m [32mtry[0m: !(_a isEqualType _b)


[0m[1m[38;5;14mhelp[L-S46][0m[1m: code can be replaced with `isEqualType`[0m
   [0m[36m┌─[0m s46_is_equal_type.sqf:17:5
   [0m[36m│[0m
[0m[36m17[0m [0m[36m│[0m if ([0m[36mtypeName _a == typeName ""[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualType`[0m
   [0m[36m│[0m
   [0m[36m=[0m [32mtry[0m: _a isEqualType ""
