libs/sqf/tests/snapshots/lints__simple_s48_is_equal_type_all.snap
---
source: libs/sqf/tests/lints.rs
expression: "lint(stringify! (s48_is_equal_type_all), true).0"
---
[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
  [0m[36m┌─[0m s48_is_equal_type_all.sqf:4:6
  [0m[36m│[0m
[0m[36m4[0m [0m[36m│[0m if ({[0m[36m_x isEqualType 0} count _arr == count _arr[0m) then { };
  [0m[36m│[0m      [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
  [0m[36m│[0m
  [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
  [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
  [0m[36m┌─[0m s48_is_equal_type_all.sqf:5:5
  [0m[36m│[0m
[0m[36m5[0m [0m[36m│[0m if ([0m[36mcount _arr == {_x isEqualType 0} count _arr[0m) then { };
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
  [0m[36m│[0m
  [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
  [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
  [0m[36m┌─[0m s48_is_equal_type_all.sqf:6:6
  [0m[36m│[0m
[0m[36m6[0m [0m[36m│[0m if ({[0m[36m_x isEqualType ""} count _arr isEqualTo count _arr[0m) then { };
  [0m[36m│[0m      [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
  [0m[36m│[0m
  [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
  [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll ""


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
  [0m[36m┌─[0m s48_is_equal_type_all.sqf:9:5
  [0m[36m│[0m
[0m[36m9[0m [0m[36m│[0m if ([0m[36m_arr findIf {!(_x isEqualType 0)} == -1[0m) then { };
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
  [0m[36m│[0m
  [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
  [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:10:5
   [0m[36m│[0m
[0m[36m10[0m [0m[36m│[0m if ([0m[36m_arr findIf {!(_x isEqualType 0)} < 0[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
   [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:11:5
   [0m[36m│[0m
[0m[36m11[0m [0m[36m│[0m if ([0m[36m_arr findIf {!(_x isEqualType 0)} <= -1[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
   [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:12:5
   [0m[36m│[0m
[0m[36m12[0m [0m[36m│[0m if ([0m[36m-1 == _arr findIf {!(_x isEqualType 0)[0m}) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
   [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:13:5
   [0m[36m│[0m
[0m[36m13[0m [0m[36m│[0m if ([0m[36m0 > _arr findIf {!(_x isEqualType 0)[0m}) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, where this check returns true
   [0m[36m=[0m [32mtry[0m: _arr isEqualTypeAll 0


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:16:6
   [0m[36m│[0m
[0m[36m16[0m [0m[36m│[0m if ({[0m[36m_x isEqualType 0} count _arr != count _arr[0m) then { };
   [0m[36m│[0m      [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, so this suggestion returns true where the original returns false
   [0m[36m=[0m [32mtry[0m: !(_arr isEqualTypeAll 0)


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:17:5
   [0m[36m│[0m
[0m[36m17[0m [0m[36m│[0m if ([0m[36m_arr findIf {!(_x isEqualType 0)} != -1[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, so this suggestion returns true where the original returns false
   [0m[36m=[0m [32mtry[0m: !(_arr isEqualTypeAll 0)


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:18:5
   [0m[36m│[0m
[0m[36m18[0m [0m[36m│[0m if ([0m[36m_arr findIf {!(_x isEqualType 0)} > -1[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, so this suggestion returns true where the original returns false
   [0m[36m=[0m [32mtry[0m: !(_arr isEqualTypeAll 0)


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:19:5
   [0m[36m│[0m
[0m[36m19[0m [0m[36m│[0m if ([0m[36m_arr findIf {!(_x isEqualType 0)} >= 0[0m) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, so this suggestion returns true where the original returns false
   [0m[36m=[0m [32mtry[0m: !(_arr isEqualTypeAll 0)


[0m[1m[38;5;14mhelp[L-S48][0m[1m: code can be replaced with `isEqualTypeAll`[0m
   [0m[36m┌─[0m s48_is_equal_type_all.sqf:20:5
   [0m[36m│[0m
[0m[36m20[0m [0m[36m│[0m if ([0m[36m0 <= _arr findIf {!(_x isEqualType 0)[0m}) then { };
   [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `isEqualTypeAll`[0m
   [0m[36m│[0m
   [0m[36m=[0m [36mnote[0m: `isEqualTypeAll` returns false for an empty array, so this suggestion returns true where the original returns false
   [0m[36m=[0m [32mtry[0m: !(_arr isEqualTypeAll 0)
