libs/sqf/tests/snapshots/lints__simple_s49_count_type.snap
---
source: libs/sqf/tests/lints.rs
expression: "lint(stringify! (s49_count_type), true).0"
---
[0m[1m[38;5;14mhelp[L-S49][0m[1m: code can be replaced with `countType`[0m
  [0m[36m┌─[0m s49_count_type.sqf:4:19
  [0m[36m│[0m
[0m[36m4[0m [0m[36m│[0m private _tanks = {[0m[36m_x isKindOf "Tank"} count _units[0m;
  [0m[36m│[0m                   [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `countType`[0m
  [0m[36m│[0m
  [0m[36m=[0m [32mtry[0m: "Tank" countType _units


[0m[1m[38;5;14mhelp[L-S49][0m[1m: code can be replaced with `countType`[0m
  [0m[36m┌─[0m s49_count_type.sqf:5:20
  [0m[36m│[0m
[0m[36m5[0m [0m[36m│[0m private _medics = {[0m[36m_x isKindOf "B_medic_F"} count allUnits[0m;
  [0m[36m│[0m                    [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `countType`[0m
  [0m[36m│[0m
  [0m[36m=[0m [32mtry[0m: "B_medic_F" countType allUnits
