libs/sqf/tests/snapshots/lints__simple_s51_push_back_unique.snap
---
source: libs/sqf/tests/lints.rs
expression: "lint(stringify! (s51_push_back_unique), true).0"
---
[0m[1m[38;5;14mhelp[L-S11][0m[1m: Unneeded not in if[0m
   [0m[36m┌─[0m s51_push_back_unique.sqf:26:4
   [0m[36m│[0m
[0m[36m26[0m [0m[36m│[0m if [0m[36m![0m(_value in _list) then {_list pushBack _value} else {_list pushBack 0};
   [0m[36m│[0m    [0m[36m^[0m [0m[36munnecessary `!` operation[0m


[0m[1m[38;5;14mhelp[L-S41][0m[1m: Use `apply` instead of `forEach` when `_forEachIndex` is unused[0m
  [0m[36m┌─[0m s51_push_back_unique.sqf:8:3
  [0m[36m│[0m
[0m[36m8[0m [0m[36m│[0m } [0m[36mforEach[0m _paramAddons;
  [0m[36m│[0m   [0m[36m^^^^^^^[0m [0m[36mforEach loop can use apply[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: replace with `array apply { ... }`


[0m[1m[38;5;14mhelp[L-S51][0m[1m: `pushBackUnique` already checks this[0m
  [0m[36m┌─[0m s51_push_back_unique.sqf:7:5
  [0m[36m│[0m
[0m[36m7[0m [0m[36m│[0m     [0m[36mif !(_x in _addons) then {_addons pushBackUnique _x[0m};
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36mredundant check[0m
  [0m[36m│[0m
  [0m[36m=[0m [36mnote[0m: `pushBackUnique` only adds the element if it is not already in the array
  [0m[36m=[0m [32mtry[0m: _addons pushBackUnique _x


[0m[1m[38;5;14mhelp[L-S51][0m[1m: code can be replaced with `pushBackUnique`[0m
  [0m[36m┌─[0m s51_push_back_unique.sqf:6:5
  [0m[36m│[0m
[0m[36m6[0m [0m[36m│[0m     [0m[36mif !(_x in _addons) then {_addons pushBack _x[0m};
  [0m[36m│[0m     [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `pushBackUnique`[0m
  [0m[36m│[0m
  [0m[36m=[0m [32mtry[0m: _addons pushBackUnique _x


[0m[1m[38;5;14mhelp[L-S51][0m[1m: code can be replaced with `pushBackUnique`[0m
   [0m[36m┌─[0m s51_push_back_unique.sqf:11:1
   [0m[36m│[0m
[0m[36m11[0m [0m[36m│[0m [0m[36mif !(_value in _list) then {_list pushBack _value[0m};
   [0m[36m│[0m [0m[36m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[36muse `pushBackUnique`[0m
   [0m[36m│[0m
   [0m[36m=[0m [32mtry[0m: _list pushBackUnique _value
