libs/sqf/tests/snapshots/lints__simple_s52_duplicate_case.snap
---
source: libs/sqf/tests/lints.rs
expression: lint(stringify! (s52_duplicate_case), true).0
---
[0m[1m[38;5;14mhelp[L-S52][0m[1m: Duplicate case `"a"` in switch statement[0m
   [0m[36m┌─[0m s52_duplicate_case.sqf:14:10
   [0m[36m│[0m
[0m[36m12[0m [0m[36m│[0m     case "a": { 1 };
   [0m[36m│[0m          [0m[36m----[0m [0m[36mfirst case here[0m
[0m[36m13[0m [0m[36m│[0m     case "b": { 2 };
[0m[36m14[0m [0m[36m│[0m     case [0m[36m"a"[0m: { 3 };
   [0m[36m│[0m          [0m[36m^^^[0m [0m[36mduplicate case[0m


[0m[1m[38;5;14mhelp[L-S52][0m[1m: Duplicate case `"b"` in switch statement[0m
   [0m[36m┌─[0m s52_duplicate_case.sqf:15:10
   [0m[36m│[0m
[0m[36m13[0m [0m[36m│[0m     case "b": { 2 };
   [0m[36m│[0m          [0m[36m----[0m [0m[36mfirst case here[0m
[0m[36m14[0m [0m[36m│[0m     case "a": { 3 };
[0m[36m15[0m [0m[36m│[0m     case [0m[36m"b"[0m: { 4 };
   [0m[36m│[0m          [0m[36m^^^[0m [0m[36mduplicate case[0m


[0m[1m[38;5;14mhelp[L-S52][0m[1m: Duplicate case `1` in switch statement[0m
  [0m[36m┌─[0m s52_duplicate_case.sqf:7:10
  [0m[36m│[0m
[0m[36m5[0m [0m[36m│[0m     case 1: { "one" };
  [0m[36m│[0m          [0m[36m--[0m [0m[36mfirst case here[0m
[0m[36m6[0m [0m[36m│[0m     case 2: { "two" };
[0m[36m7[0m [0m[36m│[0m     case [0m[36m1[0m: { "one again" };
  [0m[36m│[0m          [0m[36m^[0m [0m[36mduplicate case[0m


[0m[1m[38;5;14mhelp[L-S52][0m[1m: Duplicate case `_distBottom` in switch statement[0m
   [0m[36m┌─[0m s52_duplicate_case.sqf:22:10
   [0m[36m│[0m
[0m[36m20[0m [0m[36m│[0m     case _distBottom: { [_x, 0] };
   [0m[36m│[0m          [0m[36m------------[0m [0m[36mfirst case here[0m
[0m[36m21[0m [0m[36m│[0m     case _distRight: { [_worldSize, _y] };
[0m[36m22[0m [0m[36m│[0m     case [0m[36m_distBottom[0m: { [_x, _worldSize] };
   [0m[36m│[0m          [0m[36m^^^^^^^^^^^[0m [0m[36mduplicate case[0m
