libs/sqf/tests/snapshots/lints__simple_s53_select_substring_len.snap
---
source: libs/sqf/tests/lints.rs
expression: "lint(stringify! (s53_select_substring_len), true).0"
---
[0m[1m[38;5;14mhelp[L-S53][0m[1m: Select substring length does not match string length[0m
  [0m[36m┌─[0m s53_select_substring_len.sqf:1:44
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m if (((currentWeapon player) select [0, 3]) [0m[36m==[0m "ABC_") then {};
  [0m[36m│[0m                                            [0m[36m^^[0m [0m[36msubstring is length 3 | string is length 4[0m


[0m[1m[38;5;14mhelp[L-S53][0m[1m: Select substring length does not match string length[0m
  [0m[36m┌─[0m s53_select_substring_len.sqf:2:22
  [0m[36m│[0m
[0m[36m2[0m [0m[36m│[0m if (x1 select [0, 3] [0m[36misNotEqualTo[0m "CasE") then {};
  [0m[36m│[0m                      [0m[36m^^^^^^^^^^^^[0m [0m[36msubstring is length 3 | string is length 4[0m


[0m[1m[38;5;14mhelp[L-S53][0m[1m: Select substring length does not match string length[0m
  [0m[36m┌─[0m s53_select_substring_len.sqf:3:10
  [0m[36m│[0m
[0m[36m3[0m [0m[36m│[0m "prefix" [0m[36m==[0m addon_name select [0, 999];
  [0m[36m│[0m          [0m[36m^^[0m [0m[36msubstring is length 999 | string is length 6[0m
