libs/sqf/tests/snapshots/lints__simple_s54_branch_types_mismatch.snap
---
source: libs/sqf/tests/lints.rs
expression: "lint(stringify! (s54_branch_types_mismatch), false).0"
---
[0m[1m[38;5;11mwarning[L-S54][0m[1m: Branch types mismatch in command `=`[0m
  [0m[36m┌─[0m s54_branch_types_mismatch.sqf:2:1
  [0m[36m│[0m
[0m[36m2[0m [0m[36m│[0m [0m[33mzA = if (a) then { 1 + 1  } else { "string" }[0m;
  [0m[36m│[0m [0m[33m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [0m[33mmismatched types[0m


[0m[1m[38;5;11mwarning[L-S54][0m[1m: Branch types mismatch in command `=`[0m
  [0m[36m┌─[0m s54_branch_types_mismatch.sqf:4:1
  [0m[36m│[0m  
[0m[36m4[0m [0m[36m│[0m [0m[33m╭[0m [0m[33mzB = switch (c) do {[0m
[0m[36m5[0m [0m[36m│[0m [0m[33m│[0m [0m[33m    case 1: { 1 + 1 };[0m
[0m[36m6[0m [0m[36m│[0m [0m[33m│[0m [0m[33m    case 2: { "string" };[0m
[0m[36m7[0m [0m[36m│[0m [0m[33m│[0m [0m[33m}[0m;
  [0m[36m│[0m [0m[33m╰[0m[0m[33m─^ mismatched types[0m


[0m[1m[38;5;11mwarning[L-S54][0m[1m: Branch types mismatch in command `=`[0m
   [0m[36m┌─[0m s54_branch_types_mismatch.sqf:9:1
   [0m[36m│[0m  
[0m[36m 9[0m [0m[36m│[0m [0m[33m╭[0m [0m[33mzC = [] call {[0m
[0m[36m10[0m [0m[36m│[0m [0m[33m│[0m [0m[33m    if (random 1 > 0.5) exitWith { player };[0m
[0m[36m11[0m [0m[36m│[0m [0m[33m│[0m [0m[33m    [][0m
[0m[36m12[0m [0m[36m│[0m [0m[33m│[0m [0m[33m}[0m;
   [0m[36m│[0m [0m[33m╰[0m[0m[33m─^ mismatched types[0m
